[package]
name = "wooting-analog-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
simplelog = "0.12" # Or latest version
wooting-analog-wrapper = { git = "https://github.com/WootingKb/wooting-analog-sdk", branch = "develop", features = ["serdes"] }
log = "0.4"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"